<resources>
    <string name="app_name" translatable="false">disky</string>
    <string name="apppackage_size_app" translatable="false">Apk</string>
    <string name="apppackage_size_data">Userdata</string>
    <string name="apppackage_size_externalcache">External Cache</string>
    <string name="apppackage_size_cache">Cache</string>
    <string name="apps">Apps</string>
    <string name="system" translatable="false">Android OS</string>

    <string name="foreground_service_notification_channel_name">Disky Scan Service</string>
    <string name="foreground_service_notification_title">Scanning…</string>
    <string name="foreground_service_notification_description">This channel shows scan progress. You may safely hide this notification.</string>
    <string name="foreground_service_notification_starting_message">We are preparing to scan…</string>
    <string name="foreground_service_notification_short_message">Current Progress: %1$d%%</string>
    <string name="foreground_service_notification_long_message">Current Progress: %1$d%% \n %2$s</string>

    <string name="low_storage_notification_channel_name">Disky Low Storage Warning</string>
    <string name="low_storage_notification_title">Low Storage!</string>

    <string name="lowStorageCheckType_off">Disabled</string>
    <string name="lowStorageCheckType_hourly">Hourly</string>
    <string name="lowStorageCheckType_daily">Daily</string>
    <string name="lowStorageCheckType_weekly">Weekly</string>
    <string name="lowStorageCheckType_monthly">Monthly</string>

    <string name="lowStorageCheckThreshold_5">5%</string>
    <string name="lowStorageCheckThreshold_10">10%</string>
    <string name="lowStorageCheckThreshold_15">15%</string>
    <string name="lowStorageCheckThreshold_20">20%</string>
    <string name="lowStorageCheckThreshold_25">25%</string>
    <string name="lowStorageCheckThreshold_30">30%</string>

    <string name="contextmenu_folder_open">Open Folder</string>

    <string name="intro_slide_welcome_title">Welcome!</string>
    <string name="intro_slide_welcome_description">We will help you find your disk-hogs. But first, let us set this app up!</string>
    <string name="intro_slide_notification_title">Get Notified!</string>
    <string name="intro_slide_notification_description">We want to show you notifications when we are scanning your files. We won\'t spam you!</string>
    <string name="intro_slide_done_title">Done!</string>
    <string name="intro_slide_done_description">You are now ready to start!</string>
    <string name="intro_storage_title">Storage access</string>
    <string name="intro_storage_description">Disky relies on the permission to access all files. Please grant storage access when prompted, otherwise the application will not work properly.</string>
    <string name="intro_slide_usage_title">Usage Statistics</string>
    <string name="intro_slide_usage_description">We use usage statistics to calculate the disk usage by your apps.</string>
    <string name="contextmenu_file_open">Open</string>
    <string name="contextmenu_file_openfolder">Open in folder</string>
    <string name="mainmenu_reload">Reload</string>
    <string name="mainmenu_settings">Settings</string>
    <string name="reload">Re-Scanning Files…</string>
    <string name="reload_blocked_because_inapps">Refeshing is not possible in an app!</string>
    <string name="donate_message">Do you want to support the developer? Your contribution is greatly appreciated!</string>
    <string name="donate_button">Donate!</string>
    <string name="uicontext_folder_rootdir">You are in the root-directory.</string>
    <string name="uicontext_folder_app">Currently, you are looking at %1$s. It uses %2$s.</string>
    <string name="uicontext_folder_appcollection">This lists all your installed apps, %1$d in total. They use %2$s.</string>
    <string name="uicontext_folder_folder">You choose the %1$s folder. Its content uses %2$s of your storage.</string>
    <string name="select_storage">Select Storage</string>
    <string name="used">Used:</string>
    <string name="calculating">Calculating…</string>
    <string name="free">Free:</string>
    <string name="warning_removable_storage">Warning! Removable Storage will be unreliable! Appdata might not be included.</string>
    <string name="contextmenu_delete">Delete</string>
    <string name="yes_delete">Yes, delete permanently!</string>
    <string name="no_keep">No, keep it.</string>
    <string name="delete_confirmation_text">Are you sure you want to delete \"%1$s\"? This cannot be undone!</string>
    <string name="delete_file_title">Delete File</string>
    <string name="delete_folder_title">Delete Folder</string>
    <string name="storagewarning_notification_title">Disky: Warning! Storage filling up!</string>
    <string name="storagewarning_notification_channel_name">Full Storage Warning</string>

    <string name="action_cancel">Cancel</string>
    <string name="activity_about_madeby">Made by:</string>
    <string name="help">Help</string>
    <string name="copyright" translatable="false">"GPLv3 - ©%1$s "</string>
    <string name="faq">FAQ</string>
    <string name="about">About</string>
    <string name="sortorder">Sort Order</string>
    <string name="about_this_app">About this app</string>
    <string name="faq_description">If you have questions, they might be answered here</string>
    <string name="sortorder_aplhabet">Alphabet</string>
    <string name="sortorder_size">Size</string>
    <string name="ok">ok</string>
    <string name="help_android_os">Android OS</string>
    <string name="help_android_os_description">This collects the difference between the total available diskspace, how much is used by your files and the known free storage.\n\nThis not only includes the android system itself, but also other profiles apps and files, and temporary system files. This means that this value is inaccurate.</string>
    <string name="faq_label_accuracy">Is this app accurate?</string>
    <string name="faq_answer_accuracy">No. We can calculate your files and apps properly, but not your android system. That means you will likely get different results for the system each time you refresh the scan. This is a limitation of android itself.</string>
    <string name="faq_label_androidos">What is \"Android OS\"?</string>
    <string name="faq_answer_androidos">This is all the used space that we can\'t access. That includes other profiles and their apps and the system itself. The calculated value is therefore only an estimation of its true size.</string>
    <string name="error_notification_channel_name">Errors</string>
    <string name="error_notification_channel_message">The Scan-Service encountered an error.</string>
    <string name="error_notification_title">Scanning was not successful</string>
    <string name="error_notification_action_copy">Copy Error</string>
    <string name="contextmenu_folder_app_open">Open</string>
    <string name="contextmenu_app_open_settings">Settings</string>
    <string name="contextmenu_folder_app_delete">Uninstall</string>
    <string name="app_disabled_suffix">(Disabled)</string>
    <string name="lowStorageCheckTypeHint">Low Storage Warning Checks</string>
    <string name="lowStorageCheckThresholdHint">Low Storage Threshold</string>
    <string name="go_up">Go Back</string>
    <string name="no_items">No Items</string>
    <string name="is_below_the_threshold_of">%1$s is below the threshold of %2$d%%!</string>
    <string name="is_below_the_threshold_of_there_are_only_free">%1$s is below the threshold of %2$d%%!\nThere are only %3$s free!</string>
    <string name="scan_was_aborted">Scan was aborted</string>
    <string name="missingpermission_button_fix">Fix!</string>
    <string name="icon_warning_content_description">Warning Icon in red, Circle with an Exclamation Mark</string>
    <string name="warning_storage_permission_missing">Warning! We do not have access to scan all your files! This will create nonsense-results!</string>
    <string name="warning_appusage_permission_missing">Warning! We are not allowed to scan your apps. Apps will now be counted as system usage!</string>
</resources>
