<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FAQActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/icon_logo"
        app:title="@string/faq" />

    <TextView
        android:id="@+id/faq_label_accuracy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/faq_label_accuracy"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/faq_answer_accuracy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/faq_answer_accuracy"
        app:layout_constraintEnd_toEndOf="@+id/faq_label_accuracy"
        app:layout_constraintStart_toStartOf="@+id/faq_label_accuracy"
        app:layout_constraintTop_toBottomOf="@+id/faq_label_accuracy" />

    <TextView
        android:id="@+id/faq_label_androidos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/faq_label_androidos"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/faq_answer_accuracy" />

    <TextView
        android:id="@+id/faq_answer_androidos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/faq_answer_androidos"
        app:layout_constraintEnd_toEndOf="@+id/faq_label_androidos"
        app:layout_constraintStart_toStartOf="@+id/faq_label_androidos"
        app:layout_constraintTop_toBottomOf="@+id/faq_label_androidos" />


</androidx.constraintlayout.widget.ConstraintLayout>